Ajout du test SELECT_W_3_OPTIONS

--- a/test/fixtures/rules/SELECT_W_3_OPTIONS/true/1.html
+++ b/test/fixtures/rules/SELECT_W_3_OPTIONS/true/1.html
@@ -5,6 +5,11 @@
         <link rel="stylesheet" href="style.css" type="text/css">
     </head>
     <body>
+        <select>
+            <option value='a'>a</option>
+            <option value='b'>b</option>
+            <option value='c'>c</option>
+        </select>
         <script src="script.js"></script>
     </body>
 </html>
