--- a/test/fixtures/rules/SELECT_W_3_OPTIONS/false/index.html
+++ b/test/fixtures/rules/SELECT_W_3_OPTIONS/false/index.html
@@ -1,11 +1,14 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
-        <meta charset="utf-8">
         <title>SELECT_W_3_OPTIONS - false</title>
         <link rel="stylesheet" href="style.css" type="text/css">
     </head>
     <body>
         <script src="script.js"></script>
+        <select>
+            <option value="a">a</option>
+            <option value="b">b</option>
+        </select>
     </body>
 </html>
