Ajout des tests TITLE_W*

--- a/test/fixtures/rules/TITLE_W_MORE_THAN_80_CHAR/true/1.html
+++ b/test/fixtures/rules/TITLE_W_MORE_THAN_80_CHAR/true/1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
-        <title>TITLE_W_TEXT - false</title>
+        <title>PLus de 80 - true /\_/\_/\_/\_/\/\/\/\_/\_/\_/\_/\_/\/\/\/\_/\_/\_/\_/\/\/\/\/\_/\_/\_/\_/\/\_/\_/\_/\_/\</title>
         <link rel="stylesheet" href="style.css" type="text/css" />
     </head>
     <body>
