--- a/test/fixtures/rules/TITLE_WO_TEXT/true/1.html
+++ b/test/fixtures/rules/TITLE_WO_TEXT/true/1.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
-        <meta charset="utf-8">
-        <title>TITLE_WO_TEXT - true</title>
+        <title></title>
         <link rel="stylesheet" href="style.css" type="text/css" />
     </head>
     <body>
