--- a/test/fixtures/rules/TITLE_W_DEFAULT_VALUE/true/11.html
+++ b/test/fixtures/rules/TITLE_W_DEFAULT_VALUE/true/11.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
         <meta charset="utf-8">
-        <title>TITLE_W_MORE_THAN_80_CHAR - true</title>
+        <title>page par défaut</title>
         <link rel="stylesheet" href="style.css" type="text/css" />
     </head>
     <body>
