--- a/test/fixtures/rules/TITLE_W_DEFAULT_VALUE/true/5.html
+++ b/test/fixtures/rules/TITLE_W_DEFAULT_VALUE/true/5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
-        <title>TITLE_W_TEXT - true</title>
+        <title>default</title>
         <link rel="stylesheet" href="style.css" type="text/css" />
     </head>
     <body>
