--- a/test/fixtures/rules/TITLE_W_MORE_THAN_80_CHAR/false/index.html
+++ b/test/fixtures/rules/TITLE_W_MORE_THAN_80_CHAR/false/index.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
-        <meta charset="utf-8">
-        <title>TITLE_W_MORE_THAN_80_CHAR - false</title>
+        <title>Moins de 80 chars</title>
         <link rel="stylesheet" href="style.css" type="text/css" />
     </head>
     <body>
