Debug de tests + préparation webinar

--- a/test/fixtures/rules/BUTTON_WO_NEGATIVE_TABINDEX_ATTR/false/index.html
+++ b/test/fixtures/rules/BUTTON_WO_NEGATIVE_TABINDEX_ATTR/false/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
-        <title>META_REFRESH_WO_DELAY - true</title>
+        <title>BUTTON_WO_NEGATIVE_TABINDEX_ATTR - false</title>
         <link rel="stylesheet" href="style.css" type="text/css" />
-        <meta http-equiv="refresh" content="0" />
     </head>
     <body>
+        <button tabindex="-1"></button>
         <script src="script.js" type="text/javascript"></script>
     </body>
 </html>
