--- a/test/fixtures/rules/LINK_REL_SHORTCUT_ICON/true/1.html
+++ b/test/fixtures/rules/LINK_REL_SHORTCUT_ICON/true/1.html
@@ -1,12 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
-        <title>BUTTON_WO_NEGATIVE_TABINDEX_ATTR - false</title>
+        <title>LINK_REL_SHORTCUT_ICON - true</title>
         <link rel="stylesheet" href="style.css" type="text/css" />
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     </head>
     <body>
-        <button></button>
-        <button tabindex="-1"></button>
         <script src="script.js" type="text/javascript"></script>
     </body>
 </html>
