--- a/test/_fixtures/debug/META_REFRESH_WO_DELAY/true/2.html
+++ b/test/_fixtures/debug/META_REFRESH_WO_DELAY/true/2.html
@@ -1,10 +1,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
-        <title>LINK_REL_SHORTCUT_ICON - true</title>
+        <title>META_REFRESH_WO_DELAY - true</title>
         <link rel="stylesheet" href="style.css" type="text/css" />
+        <meta http-equiv="refresh" content="0" />
     </head>
     <body>
+        <p>
+            bla
+        </p>
         <script src="script.js" type="text/javascript"></script>
     </body>
 </html>
