--- a/test/fixtures/rules/LINK_REL_ICON/true/1.html
+++ b/test/fixtures/rules/LINK_REL_ICON/true/1.html
@@ -1,11 +1,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
-        <title>META_REFRESH_WO_DELAY - false</title>
+        <title>LINK_REL_ICON - true</title>
         <link rel="stylesheet" href="style.css" type="text/css" />
-        <meta http-equiv="refresh" content="3600;url=http://www.example.com/" />
+        <link rel="icon" href="favicon.png" type="image/png" />
     </head>
     <body>
+        <p>
+            bla
+        </p>
         <script src="script.js" type="text/javascript"></script>
     </body>
 </html>
