--- a/test/fixtures/rules/DOCTYPE_PLACED/false/index.html
+++ b/test/fixtures/rules/DOCTYPE_PLACED/false/index.html
@@ -1,10 +1,13 @@
 <html>
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+    <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
     <head>
         <title>DOCTYPE_PLACED - false</title>
         <link rel="stylesheet" href="style.css" type="text/css" />
     </head>
     <body>
+        <p>
+            bla
+        </p>
         <script src="script.js" type="text/javascript"></script>
     </body>
 </html>
