--- a/test/fixtures/rules/DOCTYPE_PLACED/true/2.html
+++ b/test/fixtures/rules/DOCTYPE_PLACED/true/2.html
@@ -2,10 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>DOMAIN_MORE_THE_30_CARACTERS - true</title>
+        <title>DOCTYPE_PLACED - true</title>
         <link rel="stylesheet" href="style.css" type="text/css" />
     </head>
     <body>
+        <p>
+            bla
+        </p>
         <script src="script.js" type="text/javascript"></script>
     </body>
 </html>
