--- a/test/fixtures/rules/FAVICON/true/1.html
+++ b/test/fixtures/rules/FAVICON/true/1.html
@@ -6,6 +6,9 @@
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     </head>
     <body>
+        <p>
+            bla
+        </p>
         <script src="script.js" type="text/javascript"></script>
     </body>
 </html>
