--- a/test/fixtures/rules/FAVICON/true/2.html
+++ b/test/fixtures/rules/FAVICON/true/2.html
@@ -6,6 +6,9 @@
         <link rel="icon" href="favicon.png" type="image/png">
     </head>
     <body>
+        <p>
+            bla
+        </p>
         <script src="script.js" type="text/javascript"></script>
     </body>
 </html>
