--- a/test/fixtures/rules/META_KEYWORDS_FILLED/false/index.html
+++ b/test/fixtures/rules/META_KEYWORDS_FILLED/false/index.html
@@ -6,6 +6,9 @@
         <meta name="keywords" content=" " />
     </head>
     <body>
+        <p>
+            bla
+        </p>
         <script src="script.js" type="text/javascript"></script>
     </body>
 </html>
