--- a/test/fixtures/rules/META_KEYWORDS_W_MORE_THAN_10_TERMS/true/1.html
+++ b/test/fixtures/rules/META_KEYWORDS_W_MORE_THAN_10_TERMS/true/1.html
@@ -6,6 +6,9 @@
         <meta name="keywords" content="bla, bla, bla, bla, bla, bla, bla, bla, bla, bla, bla" />
     </head>
     <body>
+        <p>
+            bla
+        </p>
         <script src="script.js" type="text/javascript"></script>
     </body>
 </html>
