--- a/test/fixtures/rules/META_REFRESH/true/1.html
+++ b/test/fixtures/rules/META_REFRESH/true/1.html
@@ -6,6 +6,9 @@
         <meta http-equiv="refresh" content="" />
     </head>
     <body>
+        <p>
+            bla
+        </p>
         <script src="script.js" type="text/javascript"></script>
     </body>
 </html>
