--- a/test/fixtures/rules/META_REFRESH_W_DELAY/true/2.html
+++ b/test/fixtures/rules/META_REFRESH_W_DELAY/true/2.html
@@ -6,6 +6,9 @@
         <meta http-equiv="refresh" content="3600;url=http://www.example.com/" />
     </head>
     <body>
+        <p>
+            bla
+        </p>
         <script src="script.js" type="text/javascript"></script>
     </body>
 </html>
