--- a/test/fixtures/rules/SCRIPT/false/index.html
+++ b/test/fixtures/rules/SCRIPT/false/index.html
@@ -5,6 +5,9 @@
         <link rel="stylesheet" href="style.css" type="text/css" />
     </head>
     <body>
+        <p>
+            bla
+        </p>
         <script></script>
         <script src=""></script>
     </body>
