--- a/test/fixtures/rules/STYLE_INTERNAL/false/index.html
+++ b/test/fixtures/rules/STYLE_INTERNAL/false/index.html
@@ -6,6 +6,9 @@
         <style type="text/css"></style>
     </head>
     <body>
+        <p>
+            bla
+        </p>
         <script src="script.js" type="text/javascript"></script>
     </body>
 </html>
