--- a/test/fixtures/rules/STYLE_INTERNAL/true/1.html
+++ b/test/fixtures/rules/STYLE_INTERNAL/true/1.html
@@ -4,12 +4,15 @@
         <title>STYLE_INTERNAL - true</title>
         <link rel="stylesheet" href="style.css" type="text/css" />
         <style type="text/css">
-			body {
-				color:blue;
-			}
+            body {
+                color: blue;
+            }
         </style>
     </head>
     <body>
+        <p>
+            bla
+        </p>
         <script src="script.js" type="text/javascript"></script>
     </body>
 </html>
