--- a/test/fixtures/rules-stock/IMPLICIT_FAVICON/false/index.html
+++ b/test/fixtures/rules-stock/IMPLICIT_FAVICON/false/index.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
-        <meta charset="utf-8">
-        <title>HTTP_CHARSET - true</title>
+        <title>IMPLICIT_FAVICON - false</title>
         <link rel="stylesheet" href="style.css" type="text/css" />
     </head>
     <body>
+        <p>
+            bla
+        </p>
         <script src="script.js" type="text/javascript"></script>
     </body>
 </html>
