Nouveau lot de debug + réintégration CTIE

--- a/test/fixtures/rulesets/19053/38-19053_2.html
+++ b/test/fixtures/rulesets/19053/38-19053_2.html
@@ -2,13 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<meta http-equiv="X-desc" content="page sans embed, video, audio, object, bgsound, applet, canvas ou img animée" />
-		<meta http-equiv="X-results" content="C:0,NC:0,NA:2,I:0" />
-		<title>testcase 162</title>
+		<meta http-equiv="X-desc" content="page avec resources en 404 de moins de 3Ko" />
+		<meta http-equiv="X-results" content="C:1,NC:0,NA:0,I:0" />
+		<title>testcase 38</title>
 	</head>
 	<body>
-		<p>
-			plop
-		</p>
+		<img src="test.png" />
 	</body>
 </html>
