Nouveau lot de debug

--- a/test/fixtures/rulesets/11390/15-11390_1.html
+++ b/test/fixtures/rulesets/11390/15-11390_1.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<meta http-equiv="X-desc" content="page avec video, audio, canvas, object, embed et applet" />
-		<meta http-equiv="X-results" content="C:0,NC:0,NA:0,I:6" />
+		<meta http-equiv="X-desc" content="page sans video, audio, canvas, object, embed ni applet" />
+		<meta http-equiv="X-results" content="C:0,NC:0,NA:6,I:0" />
 		<title>testcase 15</title>
 	</head>
 	<body>
