--- a/test/fixtures/rulesets/13654/85-13654_1.html
+++ b/test/fixtures/rulesets/13654/85-13654_1.html
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta http-equiv="X-desc" content="page sans table" />
-        <meta http-equiv="X-results" content="C:0,NC:0,NA:1,I:0" />
-        <title>testcase TAB-06</title>
+        <meta http-equiv="X-desc" content="page sans robots.txt" />
+        <meta http-equiv="X-results" content="C:0,NC:1,NA:0,I:0" />
+        <title>testcase 85</title>
     </head>
     <body>
         <p>
