--- a/test/fixtures/rulesets/13816/247-13816_2.html
+++ b/test/fixtures/rulesets/13816/247-13816_2.html
@@ -2,13 +2,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta http-equiv="X-desc" content="page sans table" />
-        <meta http-equiv="X-results" content="C:0,NC:0,NA:1,I:0" />
-        <title>testcase TAB-06</title>
+        <meta http-equiv="X-desc" content="page avec table" />
+        <meta http-equiv="X-results" content="C:0,NC:0,NA:0,I:1" />
+        <title>testcase 247</title>
     </head>
     <body>
-        <p>
-            plop
-        </p>
+        <table>
+            <tr>
+                <td>plop</td>
+            </tr>
+        </table>
     </body>
 </html>
