--- a/test/fixtures/rulesets/11294/7-11294_1.html
+++ b/test/fixtures/rulesets/11294/7-11294_1.html
@@ -2,13 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<meta http-equiv="X-desc" content="page sans video, audio, canvas, object, embed ni applet" />
-		<meta http-equiv="X-results" content="C:0,NC:0,NA:6,I:0" />
-		<title>testcase 140</title>
+		<meta http-equiv="X-desc" content="page sans robots.txt" />
+		<meta http-equiv="X-results" content="C:0,NC:1,NA:0,I:0" />
+		<title>testcase 7</title>
 	</head>
 	<body>
 		<p>
-            plop
-        </p>
+			plop
+		</p>
 	</body>
 </html>
