--- a/test/fixtures/rulesets/13816/247-13816_1.html
+++ b/test/fixtures/rulesets/13816/247-13816_1.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta http-equiv="X-desc" content="page sans table" />
         <meta http-equiv="X-results" content="C:0,NC:0,NA:1,I:0" />
-        <title>testcase TAB-06</title>
+        <title>testcase 247</title>
     </head>
     <body>
         <p>
