Fin de la récupération des anciens tests

--- a/test/fixtures/rules/FORM_WO_SUBMIT/false/index.html
+++ b/test/fixtures/rules/FORM_WO_SUBMIT/false/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <form>
-            <button></button>
+            <button type="submit"></button>
         </form>
         <form>
             <input type="submit" />
