--- a/test/fixtures/rules/test30/false/index.html
+++ b/test/fixtures/rules/test30/false/index.html
@@ -5,12 +5,14 @@
         <link rel="stylesheet" href="style.css" type="text/css" />
     </head>
     <body>
-        <div id="subNav">
-            <ul>
-                <li>
-                    bla
-                </li>
-            </ul>
+        <div id="thematicNav">
+            <div id="subNav">
+                <ul>
+                    <li>
+                        bla
+                    </li>
+                </ul>
+            </div>
         </div>
         <script src="script.js" type="text/javascript"></script>
     </body>
