Nouveau lot de debug

--- a/test/fixtures/rulesets/13699/130-13699_3.html
+++ b/test/fixtures/rulesets/13699/130-13699_3.html
@@ -7,6 +7,6 @@
 		<title>testcase 130</title>
 	</head>
 	<body>
-		<img src="fixe.jpg" alt="" longdesc="desc.html"/>
+		<img src="fixe.jpg" alt="" longdesc="130-13699_3.html"/>
 	</body>
 </html>
