modify test unit test6

--- a/test/fixtures/rules/test6/false/index.html
+++ b/test/fixtures/rules/test6/false/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css" type="text/css" />
     </head>
     <body>
-        <table></table>
+        <table><tr><td>Hello</td></tr></table>
         <script src="script.js" type="text/javascript"></script>
     </body>
 </html>
