Nouveau lot de debug

--- a/test/fixtures/rulesets/19068/501-19068_3.html
+++ b/test/fixtures/rulesets/19068/501-19068_3.html
@@ -6,8 +6,8 @@
 		<meta http-equiv="X-results" content="C:9,NC:9,NA:0,I:0" />
 		<title>testcase 501</title>
 	</head>
-	<body color="#000" link="#000" text="#000" alink="#000" vlink="#000" bgcolor="#FFF">
-		<p background="#123" align="center">
+	<body color="#000" link="#000" text="#000" alink="#000" vlink="#000" background="#FFF">
+		<p bgcolor="#123" align="center">
 			<img border="1" src="fixe.jpg"/>
 			bla bla
 		</p>
