--- a/test/fixtures/rulesets/19437/78-19437_3.html
+++ b/test/fixtures/rulesets/19437/78-19437_3.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<meta http-equiv="X-desc" content="page avec h1, h2, h3, h4, h5 ou h6 dont les termes sont dans le contenu" />
-		<meta http-equiv="X-results" content="C:6,NC:0,NA:0,I:0" />
-		<title>testcase 78</title>
-	</head>
-	<body>
-		<h1>plop plop1</h1>
-		<h2>
-		<img src="fixe.jpg" alt="plop plop2" />
-		</h2>
-		<h3>plop plop3</h3>
-		<h4>plop plop4</h4>
-		<h5>plop plop5</h5>
-		<h6>plop plop6</h6>
-		<p>
-			plop1 plop2 plop3 plop4 plop5 plop6
-		</p>
-	</body>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta http-equiv="X-desc" content="page avec h1, h2, h3, h4, h5 ou h6 dont les termes sont dans le meta keywords" />
+        <meta http-equiv="X-results" content="C:6,NC:0,NA:0,I:0" />
+        <title>testcase 78</title>
+        <meta name="keywords" content="plop1 plop2 plop3 plop4 plop5 plop6" />
+    </head>
+    <body>
+        <h1>plop plop1</h1>
+        <h2><img src="fixe.jpg" alt="plop plop2" /></h2>
+        <h3>plop plop3</h3>
+        <h4>plop plop4</h4>
+        <h5>plop plop5</h5>
+        <h6>plop plop6</h6>
+    </body>
 </html>
