--- a/test/fixtures/rulesets/657/158-657_3.html
+++ b/test/fixtures/rulesets/657/158-657_3.html
@@ -6,8 +6,8 @@
 		<meta http-equiv="X-results" content="C:9,NC:9,NA:0,I:0" />
 		<title>testcase 158</title>
 	</head>
-	<body color="#000" link="#000" text="#000" alink="#000" vlink="#000" bgcolor="#FFF">
-		<p background="#123" align="center">
+	<body color="#000" link="#000" text="#000" alink="#000" vlink="#000" background="#123">
+		<p bgcolor="#FFF" align="center">
 			<img border="1" src="fixe.jpg"/>
 			bla bla
 		</p>
