--- a/test/fixtures/rulesets/21597/5-4-21597_2.html
+++ b/test/fixtures/rulesets/21597/5-4-21597_2.html
@@ -7,26 +7,30 @@
 		<title>testcase 5.4</title>
 	</head>
 	<body>
-		<table summary="xxx xxx xxx">
-			<tr>
-				<td>xxx</td>
-				<td>yyy</td>
-			</tr>
-			<tr>
-				<td>111</td>
-				<td>222</td>
-			</tr>
-		</table>
-		<table summary="xxx xxx xxx">
-			<caption></caption>
-			<tr>
-				<td>xxx</td>
-				<td>yyy</td>
-			</tr>
-			<tr>
-				<td>111</td>
-				<td>222</td>
-			</tr>
-		</table>
+		 <table>
+            <tfoot>
+                <tr>
+                    <td>xxx</td>
+                    <td>yyy</td>
+                </tr>
+            </tfoot>
+            <tr>
+                <td>111</td>
+                <td>222</td>
+            </tr>
+        </table>
+        <table>
+            <caption></caption>
+            <tfoot>
+                <tr>
+                    <td>xxx</td>
+                    <td>yyy</td>
+                </tr>
+            </tfoot>
+            <tr>
+                <td>111</td>
+                <td>222</td>
+            </tr>
+        </table>
 	</body>
 </html>
