--- a/test/fixtures/rulesets/21597/5-4-21597_5.html
+++ b/test/fixtures/rulesets/21597/5-4-21597_5.html
@@ -7,18 +7,20 @@
 		<title>testcase 5.4</title>
 	</head>
 	<body>
-		<table summary="xxx xxx xxx">
-			<caption>
-				dgfg dgdfg f
-			</caption>
-			<tr>
-				<td>xxx</td>
-				<td>yyy</td>
-			</tr>
-			<tr>
-				<td>111</td>
-				<td>222</td>
-			</tr>
-		</table>
+		<table>
+            <caption>
+                dgfg dgdfg f
+            </caption>
+            <tfoot>
+                <tr>
+                    <td>xxx</td>
+                    <td>yyy</td>
+                </tr>
+            </tfoot>
+            <tr>
+                <td>111</td>
+                <td>222</td>
+            </tr>
+        </table>
 	</body>
 </html>
