--- a/test/fixtures/rulesets/28034/110-28034_2.html
+++ b/test/fixtures/rulesets/28034/110-28034_2.html
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta http-equiv="X-desc" content="page sans entêtes serveur charset" />
+        <meta http-equiv="X-desc" content="page avec entêtes serveur charset incorrect" />
         <meta http-equiv="X-results" content="C:0,NC:1,NA:0,I:0" />
-        <title>testcase 75</title>
+        <title>testcase 110</title>
     </head>
     <body>
         plop plop
