--- a/test/fixtures/rulesets-debug/28066/73-28066_3.html
+++ b/test/fixtures/rulesets-debug/28066/73-28066_3.html
@@ -2,33 +2,30 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta http-equiv="X-desc" content="page avec font generique" />
-        <meta http-equiv="X-results" content="C:1,NC:0,NA:0,I:0" />
+        <meta http-equiv="X-desc" content="page sans font generique" />
+        <meta http-equiv="X-results" content="C:0,NC:1,NA:0,I:0" />
         <title>testcase 73</title>
         <style type="text/css">
             body {
-                font: 100% "arial", "cursive";
+                font: 100% "arial";
             }
 
             div {
-                font-family: "times", "serif";
+                font-family: "times";
             }
 
             p {
-                font: 100% arial, "fantasy";
+                font: 100% arial;
             }
 
-            small {
-                font-family: inherit;
+            div p {
+                font-family: times;
             }
         </style>
     </head>
     <body>
         plop
         <div>
-            <small>
-                plop
-            </small>
             plop
             <p>
                 plop
