--- a/test/fixtures/rulesets/28068/71-28068_1.html
+++ b/test/fixtures/rulesets/28068/71-28068_1.html
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta http-equiv="X-desc" content="page sans style" />
+        <meta http-equiv="X-desc" content="page sans font" />
         <meta http-equiv="X-results" content="C:1,NC:0,NA:0,I:0" />
-        <title>testcase 73</title>
+        <title>testcase 71</title>
     </head>
     <body>
         <p>
