--- a/test/fixtures/rulesets/28068/71-28068_2.html
+++ b/test/fixtures/rulesets/28068/71-28068_2.html
@@ -2,13 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta http-equiv="X-desc" content="page sans style" />
-        <meta http-equiv="X-results" content="C:1,NC:0,NA:0,I:0" />
-        <title>testcase 73</title>
+        <meta http-equiv="X-desc" content="page avec font" />
+        <meta http-equiv="X-results" content="C:0,NC:1,NA:0,I:0" />
+        <title>testcase 71</title>
     </head>
     <body>
         <p>
-            plop
+            <font face="Arial">plop</font>
         </p>
     </body>
 </html>
