--- a/test/fixtures/rulesets/28111/18-28111_2.html
+++ b/test/fixtures/rulesets/28111/18-28111_2.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta http-equiv="X-desc" content="page sans style" />
+        <meta http-equiv="X-desc" content="form avec label avec for" />
         <meta http-equiv="X-results" content="C:1,NC:0,NA:0,I:0" />
-        <title>testcase 73</title>
+        <title>testcase 18</title>
     </head>
     <body>
-        <p>
-            plop
-        </p>
+        <form>
+            <label for="foo">plop</label>
+            <input id="foo" />
+        </form>
     </body>
 </html>
