Nouveau lot de debug

--- a/test/fixtures/rulesets/16206/46-16206_1.html
+++ b/test/fixtures/rulesets/16206/46-16206_1.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta http-equiv="X-desc" content="title de moins de 80 caractères" />
 		<meta http-equiv="X-results" content="C:1,NC:0,NA:0,I:0" />
-		<title>testcase 46</title>
+		<title>testcase 46 - plop - plop - plop - plop - plop - plop - plop - plop - plop - plo</title>
 	</head>
 	<body>
 		<p>
