--- a/test/fixtures/rules/test34/true/1.html
+++ b/test/fixtures/rules/test34/true/1.html
@@ -7,9 +7,8 @@
     <body>
         <div id="contentBody">
             <a href="bla.doc"></a>
-            <a href="bla.pdf"></a>
             <div id="relatedLinkBox">
-                <a href="bla.pdf"></a>
+                <a href="bla.doc"></a>
             </div>
         </div>
         <script src="script.js" type="text/javascript"></script>
