Nouveau lot de debug

--- a/test/fixtures/rulesets/23794/tbl-003-23794_1.html
+++ b/test/fixtures/rulesets/23794/tbl-003-23794_1.html
@@ -7,10 +7,12 @@
         <title>testcase TBL-003</title>
     </head>
     <body>
-       <table>
-            <tr>
-                <td>plop</td>
-            </tr>
+        <table>
+            <tfoot>
+                <tr>
+                    <td>plop</td>
+                </tr>
+            </tfoot>
         </table>
     </body>
 </html>
