--- a/test/fixtures/21597/5-4-21597_2.html
+++ b/test/fixtures/21597/5-4-21597_2.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<meta http-equiv="X-desc" content="table avec summary non vide sans caption non vide" />
+		<meta http-equiv="X-desc" content="table avec tfoot sans caption non vide" />
 		<meta http-equiv="X-results" content="C:0,NC:1,NA:0,I:0" />
 		<title>testcase 5.4</title>
 	</head>
