--- a/test/fixtures/21597/5-4-21597_5.html
+++ b/test/fixtures/21597/5-4-21597_5.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<meta http-equiv="X-desc" content="table avec summary non vide et caption non vide" />
-		<meta http-equiv="X-results" content="C:0,NC:0,NA:0,I:1" />
+		<meta http-equiv="X-desc" content="table avec tfoot et caption non vide" />
+		<meta http-equiv="X-results" content="C:1,NC:0,NA:0,I:0" />
 		<title>testcase 5.4</title>
 	</head>
 	<body>
