--- a/test/fixtures/rules/CSS_FONTS_NUMBER_4/false/index.html
+++ b/test/fixtures/rules/CSS_FONTS_NUMBER_4/false/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
-        <title>test18 - false</title>
+        <title>CSS_FONTS_NUMBER - false</title>
         <link rel="stylesheet" href="style.css" type="text/css" />
     </head>
     <body>
         <p>
-            <a href="bla">bla</a> bla <a href="">bla</a>
+            bla
         </p>
+        <div>
+            bla
+        </div>
         <script src="script.js" type="text/javascript"></script>
     </body>
 </html>
