--- a/test/fixtures/sets/29398/ch-18-29398_2.html
+++ b/test/fixtures/sets/29398/ch-18-29398_2.html
@@ -2,13 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta http-equiv="X-desc" content="page 404 en 200" />
+        <meta http-equiv="X-desc" content="un lien mailto" />
         <meta http-equiv="X-results" content="C:0,NC:1,NA:0,I:0" />
-        <title>testcase 79</title>
+        <title>testcase CH-18</title>
     </head>
     <body>
         <p>
-            plop
+            <a href="mailto:test@example.com">bla</a>
         </p>
     </body>
 </html>
