--- a/test/fixtures/rules/A_W_MAILTO_HREF_ATTRIBUTE/true/1.html
+++ b/test/fixtures/rules/A_W_MAILTO_HREF_ATTRIBUTE/true/1.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
-        <title>test18 - false</title>
+        <title>A_W_MAILTO_HREF_ATTRIBUTE - true</title>
         <link rel="stylesheet" href="style.css" type="text/css" />
     </head>
     <body>
         <p>
-            <a href="bla">bla</a> bla <a href="">bla</a>
+            <a href="mailto:test@example.com">bla</a>
         </p>
         <script src="script.js" type="text/javascript"></script>
     </body>
