--- a/test/fixtures/sets/16259/69-16259_1.html
+++ b/test/fixtures/sets/16259/69-16259_1.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<meta http-equiv="X-desc" content="robots.txt sans sitemap" />
-		<meta http-equiv="X-results" content="C:0,NC:1,NA:0,I:0" />
+		<meta http-equiv="X-desc" content="page avec sitemap implicite" />
+		<meta http-equiv="X-results" content="C:1,NC:0,NA:0,I:0" />
 		<title>testcase 69</title>
 	</head>
 	<body>
