Nouveau lot de debug

--- a/test/fixtures/sets/16181/2-16181_1.html
+++ b/test/fixtures/sets/16181/2-16181_1.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<meta http-equiv="X-desc" content="page sans video, audio, applet, canvas, object ni embed" />
+		<meta http-equiv="X-desc" content="page sans video, audio, applet, object, embed ni canvas" />
 		<meta http-equiv="X-results" content="C:0,NC:0,NA:6,I:0" />
 		<title>testcase 2</title>
 	</head>
