--- a/test/fixtures/rules/P_WO_TEXT/false/index.html
+++ b/test/fixtures/rules/P_WO_TEXT/false/index.html
@@ -35,6 +35,9 @@
         <p>
             <object></object>
         </p>
+        <p>
+            <iframe src="http://www.example.com/"></iframe>
+        </p>
         <script src="script.js" type="text/javascript"></script>
     </body>
 </html>
