--- a/test/fixtures/rules/RSS_SUMMARY/true/1.html
+++ b/test/fixtures/rules/RSS_SUMMARY/true/1.html
@@ -3,7 +3,7 @@
     <head>
         <title>RSS_SUMMARY - true</title>
         <link rel="stylesheet" href="style.css" type="text/css" />
-        <link rel="alternate" href="test.rss" type="application/rss+xml" />
+        <link rel="alternate" href="1.rss" type="application/rss+xml" />
     </head>
     <body>
         <p>
