--- a/test/fixtures/rules/RSS_SUMMARY/true/2.html
+++ b/test/fixtures/rules/RSS_SUMMARY/true/2.html
@@ -3,7 +3,7 @@
     <head>
         <title>RSS_SUMMARY - true</title>
         <link rel="stylesheet" href="style.css" type="text/css" />
-        <link rel="alternate" href="test.atom" type="application/atom+xml" />
+        <link rel="alternate" href="2.atom" type="application/atom+xml" />
     </head>
     <body>
         <p>
