--- a/test/fixtures/sets/16181/2-16181_2.html
+++ b/test/fixtures/sets/16181/2-16181_2.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta http-equiv="X-desc" content="page avec video, audio, applet, canvas, object et embed" />
+        <meta http-equiv="X-desc" content="page avec video, audio, applet, object, embed et canvas" />
         <meta http-equiv="X-results" content="C:0,NC:0,NA:0,I:6" />
         <title>testcase 2</title>
     </head>
@@ -24,20 +24,20 @@
             </applet>
         </p>
         <p>
-            <canvas id="myCanvas"></canvas>
-        </p>
-        <script type="text/javascript">
-            var canvas = document.getElementById('myCanvas');
-            var ctx = canvas.getContext('2d');
-            ctx.fillStyle = '#FF0000';
-            ctx.fillRect(0, 0, 80, 100);
-        </script>
-        <p>
             <object width="100%" height="400" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#3,0,0,0" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000">
                 <param value="flash.swf" name="SRC">
                 <param value="high" name="QUALITY">
                 <embed width="100%" height="400" quality="high" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/shockwave/download/" src="flash.swf" />
             </object>
         </p>
+        <p>
+            <canvas id="myCanvas"></canvas>
+        </p>
+        <script type="text/javascript">
+var canvas=document.getElementById('myCanvas');
+var ctx=canvas.getContext('2d');
+ctx.fillStyle='#FF0000';
+ctx.fillRect(0,0,80,100);
+        </script>
     </body>
 </html>
