--- a/test/fixtures/sets/21740/47-21740_2.html
+++ b/test/fixtures/sets/21740/47-21740_2.html
@@ -34,10 +34,10 @@
             <canvas id="myCanvas"></canvas>
         </p>
         <script type="text/javascript">
-            var canvas = document.getElementById('myCanvas');
-            var ctx = canvas.getContext('2d');
-            ctx.fillStyle = '#FF0000';
-            ctx.fillRect(0, 0, 80, 100);
+var canvas=document.getElementById('myCanvas');
+var ctx=canvas.getContext('2d');
+ctx.fillStyle='#FF0000';
+ctx.fillRect(0,0,80,100);
         </script>
     </body>
 </html>
