--- a/test/fixtures/sets/585/86-585_1.html
+++ b/test/fixtures/sets/585/86-585_1.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<meta http-equiv="X-desc" content="page sans object, video, embed, applet, audio ni canvas" />
+		<meta http-equiv="X-desc" content="page sans video, audio, applet, object, embed ni canvas" />
 		<meta http-equiv="X-results" content="C:0,NC:0,NA:6,I:0" />
 		<title>testcase 86</title>
 	</head>
