--- a/test/fixtures/sets/585/86-585_2.html
+++ b/test/fixtures/sets/585/86-585_2.html
@@ -9,7 +9,7 @@
     <body>
         <p>
             <video src="video.ogg" controls="controls">
-                Your browser does not support the video element.
+                Your browser does not support the video tag
             </video>
         </p>
         <p>
@@ -27,17 +27,17 @@
             <object width="100%" height="400" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#3,0,0,0" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000">
                 <param value="flash.swf" name="SRC">
                 <param value="high" name="QUALITY">
-                <embed width="100%" height="400" quality="high" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/shockwave/download/" src="flash.swf"></embed>
+                <embed width="100%" height="400" quality="high" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/shockwave/download/" src="flash.swf" />
             </object>
         </p>
         <p>
             <canvas id="myCanvas"></canvas>
         </p>
         <script type="text/javascript">
-            var canvas = document.getElementById('myCanvas');
-            var ctx = canvas.getContext('2d');
-            ctx.fillStyle = '#FF0000';
-            ctx.fillRect(0, 0, 80, 100);
+var canvas=document.getElementById('myCanvas');
+var ctx=canvas.getContext('2d');
+ctx.fillStyle='#FF0000';
+ctx.fillRect(0,0,80,100);
         </script>
     </body>
 </html>
