Debug on Atom feeds cacheability

--- a/test/fixtures/rules/RSS_CACHE/true/3.html
+++ b/test/fixtures/rules/RSS_CACHE/true/3.html
@@ -3,7 +3,7 @@
     <head>
         <title>RSS_CACHE - true</title>
         <link rel="stylesheet" href="style.css" type="text/css" />
-        <link rel="alternate" href="test2.atom" type="application/atom+xml" />
+        <link rel="alternate" href="test.atom" type="application/atom+xml" />
     </head>
     <body>
         <p>
