--- a/test/fixtures/rules/META_CHARSET_VALID/true/2.html
+++ b/test/fixtures/rules/META_CHARSET_VALID/true/2.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <p>
-            bla
+            bla é
         </p>
         <script src="script.js" type="text/javascript"></script>
     </body>
