--- a/test/fixtures/sets/30490/COD-003-30490_2.html
+++ b/test/fixtures/sets/30490/COD-003-30490_2.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta http-equiv="X-desc" content="page avec frameset, frame et noframes" />
         <meta http-equiv="X-results" content="C:0,NC:3,NA:0,I:0" />
-        <title>testcase 52</title>
+        <title>testcase COD-003</title>
     </head>
     <frameset cols="50%,50%">
         <frame src="52-551_1.html" />
