--- a/test/fixtures/rules/test18/false/index.html
+++ b/test/fixtures/rules/test18/false/index.html
@@ -8,6 +8,14 @@
         <p>
             <a href="bla">bla</a> bla <a href="">bla</a>
         </p>
+        <ul>
+            <li>
+                <a href="bla">bla</a>
+            </li>
+            <li>
+                <a href="bla">bla</a>
+            </li>
+        </ul>
         <script src="script.js" type="text/javascript"></script>
     </body>
 </html>
