--- a/test/fixtures/rules/test18/true/1.html
+++ b/test/fixtures/rules/test18/true/1.html
@@ -6,7 +6,8 @@
     </head>
     <body>
         <p>
-            <a href="bla">bla</a><a href="">bla</a>
+            <a href="bla">bla</a>
+            <a href="">bla</a>
         </p>
         <script src="script.js" type="text/javascript"></script>
     </body>
