--- a/test/fixtures/sets/30551/ide-007-30551_2.html
+++ b/test/fixtures/sets/30551/ide-007-30551_2.html
@@ -2,13 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta http-equiv="X-desc" content="page sans lien contenant une majuscule, un underscore, un caractère spécial ou une espace" />
-        <meta http-equiv="X-results" content="C:1,NC:0,NA:0,I:0" />
+        <meta http-equiv="X-desc" content="page avec lien contenant une majuscule mais sans underscore, caractère spécial ou espace" />
+        <meta http-equiv="X-results" content="C:0,NC:1,NA:0,I:0" />
         <title>testcase IDE-007</title>
     </head>
     <body>
         <p>
-            <a href="bla">bla</a>
+            <a href="Bla">bla</a>
         </p>
     </body>
 </html>
