Fix set 16210 (SEO criterion)

--- a/test/fixtures/sets/16210/13-16210_3.html
+++ b/test/fixtures/sets/16210/13-16210_3.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-desc" content="page avec h1, h2, h3, h4, h5 ou h6 dont les termes sont dans le meta keywords" />
         <meta http-equiv="X-results" content="C:6,NC:0,NA:0,I:0" />
         <title>testcase 13</title>
-        <meta name="keywords" content="plop1 plop2 plop3 plop4 plop5 plop6" />
+        <meta name="keywords" content="plop1, plop2, plop3, plop4, plop5, plop6" />
     </head>
     <body>
         <h1>plop plop1</h1>
