Fix rules CSS_W_CR and JS_W_CR (FF slowness with some regexp) + adding unit tests

--- a/test/fixtures/rules/CSS_W_CR/true/2.html
+++ b/test/fixtures/rules/CSS_W_CR/true/2.html
@@ -1,14 +1,23 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
-        <title>CSS_W_CR - false</title>
-        <link rel="stylesheet" href="style.css" type="text/css" />
+        <title>CSS_W_CR - true</title>
         <style>
+            html {
+                background-color: black;
+                color: white;
+            }
             body {
+                background-color: yellow;
                 color: red;
+                font-family: Arial;
+                font-size: 16px;
             }
             p {
+                background-color: black;
                 color: blue;
+                font-family: Verdana;
+                font-size: 12px;
             }
         </style>
     </head>
