--- a/test/fixtures/rules/CSS_W_CR/true/3.html
+++ b/test/fixtures/rules/CSS_W_CR/true/3.html
@@ -1,16 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
-        <title>JS_W_CR - false</title>
-        <link rel="stylesheet" href="style.css" type="text/css" />
+        <title>CSS_W_CR - true</title>
+        <link rel="stylesheet" href="import.css" type="text/css" />
     </head>
     <body>
         <p>
             bla
         </p>
         <script src="script.js" type="text/javascript"></script>
-        <script type="text/javascript">
-            var foo = "bla", bar = "bla";
-        </script>
     </body>
 </html>
