--- a/test/fixtures/rules/JS_W_CR/true/1.html
+++ b/test/fixtures/rules/JS_W_CR/true/1.html
@@ -9,5 +9,17 @@
             bla
         </p>
         <script src="script.js" type="text/javascript"></script>
+        <script type="text/javascript">
+            var foo = "bla";
+            var bar = "bla";
+            var foo = "bla";
+            var bar = "bla";
+            var foo = "bla";
+            var bar = "bla";
+            var foo = "bla";
+            var bar = "bla";
+            var foo = "bla";
+            var bar = "bla";
+        </script>
     </body>
 </html>
