--- a/test/fixtures/rules/STRUCTURE_W_ROLE_BANNER_SEARCH_MAIN_CONTENTINFO_NOT_UNIQUE/true/2.html
+++ b/test/fixtures/rules/STRUCTURE_W_ROLE_BANNER_SEARCH_MAIN_CONTENTINFO_NOT_UNIQUE/true/2.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>STRUCTURE_W_ROLE_BANNER_NAVIGATION_MAIN_CONTENTINFO_NOT_UNIQUE - true</title>
+		<title>STRUCTURE_W_ROLE_BANNER_SEARCH_MAIN_CONTENTINFO_NOT_UNIQUE - true</title>
 		<link rel="stylesheet" href="style.css" type="text/css" />
 	</head>
 	<body>
 		<header role="banner">
-			<nav role="navigation"></nav>
-			<nav role="navigation"></nav>
+			<form>
+				<input type="search" role="search" />
+				<input type="search" role="search" />
+			</form>
 		</header>
 		<main role="main"></main>
 		<footer role="contentinfo"></footer>
