--- a/test/fixtures/sets-debug/38696/11-1-1-38696_2.html
+++ b/test/fixtures/sets-debug/38696/11-1-1-38696_2.html
@@ -2,8 +2,8 @@
 <html lang="fr">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<meta http-equiv="X-desc" content="input de type search, checkbox, tel, url, text, number, color, range, radio, file, time, date, password, email et option, textarea, datalist, meter, keygen, output, optgroup, progress, select avec title, label, aria-label ou aria-labelledby" />
-		<meta http-equiv="X-results" content="C:23,NC:0,NA:0,I:0" />
+		<meta http-equiv="X-desc" content="input de type search, checkbox, tel, url, text, number, color, range, radio, file, time, date, password, email et textarea, datalist, meter, keygen, output, optgroup, progress, select avec title, label, aria-label ou aria-labelledby" />
+		<meta http-equiv="X-results" content="C:22,NC:0,NA:0,I:0" />
 		<title>testcase 11.1.1</title>
 	</head>
 	<body>
@@ -91,13 +91,7 @@
 		<input type="email" aria-label="" />
 		<input type="email" aria-labelledby="" />
 
-		<option title=""></option>
-		<label for="option">bla</label>
-		<option id="option"></option>
-		<option aria-label=""></option>
-		<option aria-labelledby=""></option>
 		<textarea title=""></textarea>
-
 		<label for="textarea">bla</label>
 		<textarea id="textarea"></textarea>
 		<textarea aria-label=""></textarea>
