--- a/test/fixtures/sets-debug/38696/11-1-1-38696_3.html
+++ b/test/fixtures/sets-debug/38696/11-1-1-38696_3.html
@@ -2,8 +2,8 @@
 <html lang="fr">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<meta http-equiv="X-desc" content="input de type search, checkbox, tel, url, text, number, color, range, radio, file, time, date, password, email et option, textarea, datalist, meter, keygen, output, optgroup, progress, select sans title, label, aria-label ou aria-labelledby" />
-		<meta http-equiv="X-results" content="C:0,NC:23,NA:0,I:0" />
+		<meta http-equiv="X-desc" content="input de type search, checkbox, tel, url, text, number, color, range, radio, file, time, date, password, email et textarea, datalist, meter, keygen, output, optgroup, progress, select sans title, label, aria-label ou aria-labelledby" />
+		<meta http-equiv="X-results" content="C:0,NC:22,NA:0,I:0" />
 		<title>testcase 11.1.1</title>
 	</head>
 	<body>
@@ -21,7 +21,6 @@
 		<input type="date" />
 		<input type="password" />
 		<input type="email" />
-		<option></option>
 		<textarea></textarea>
 		<datalist></datalist>
 		<meter></meter>
