--- a/test/fixtures/rules/SPACE_BETWEEN_LETTERS/false/index.html
+++ b/test/fixtures/rules/SPACE_BETWEEN_LETTERS/false/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <pre>
-            B L
+            il y a surtout
         </pre>
         <script src="script.js" type="text/javascript"></script>
     </body>
