--- a/test/fixtures/rules/STRUCTURE_W_ROLE_BANNER_SEARCH_MAIN_CONTENTINFO_NOT_UNIQUE/true/1.html
+++ b/test/fixtures/rules/STRUCTURE_W_ROLE_BANNER_SEARCH_MAIN_CONTENTINFO_NOT_UNIQUE/true/1.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>STRUCTURE_W_ROLE_BANNER_NAVIGATION_MAIN_CONTENTINFO_NOT_UNIQUE - true</title>
+		<title>STRUCTURE_W_ROLE_BANNER_SEARCH_MAIN_CONTENTINFO_NOT_UNIQUE - true</title>
 		<link rel="stylesheet" href="style.css" type="text/css" />
 	</head>
 	<body>
 		<header role="banner">
-			<nav role="navigation"></nav>
+			<h1 role="banner"></h1>
+			<form>
+				<input type="search" role="search" />
+			</form>
 		</header>
-		<main role="main">
-			<div role="main"></div>
-		</main>
+		<main role="main"></main>
 		<footer role="contentinfo"></footer>
 		<script src="script.js" type="text/javascript"></script>
 	</body>
