--- a/test/fixtures/rules/STRUCTURE_W_ROLE_BANNER_SEARCH_MAIN_CONTENTINFO_NOT_UNIQUE/true/3.html
+++ b/test/fixtures/rules/STRUCTURE_W_ROLE_BANNER_SEARCH_MAIN_CONTENTINFO_NOT_UNIQUE/true/3.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>STRUCTURE_W_ROLE_BANNER_NAVIGATION_MAIN_CONTENTINFO_NOT_UNIQUE - false</title>
+		<title>STRUCTURE_W_ROLE_BANNER_SEARCH_MAIN_CONTENTINFO_NOT_UNIQUE - true</title>
 		<link rel="stylesheet" href="style.css" type="text/css" />
 	</head>
 	<body>
 		<header role="banner">
-			<nav role="navigation"></nav>
+			<form>
+				<input type="search" role="search" />
+			</form>
 		</header>
-		<main role="main"></main>
+		<main role="main">
+			<div role="main"></div>
+		</main>
 		<footer role="contentinfo"></footer>
 		<script src="script.js" type="text/javascript"></script>
 	</body>
