--- a/test/fixtures/rules/STRUCTURE_W_ROLE_BANNER_SEARCH_MAIN_CONTENTINFO_NOT_UNIQUE/true/4.html
+++ b/test/fixtures/rules/STRUCTURE_W_ROLE_BANNER_SEARCH_MAIN_CONTENTINFO_NOT_UNIQUE/true/4.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>STRUCTURE_W_ROLE_BANNER_NAVIGATION_MAIN_CONTENTINFO_NOT_UNIQUE - true</title>
+		<title>STRUCTURE_W_ROLE_BANNER_SEARCH_MAIN_CONTENTINFO_NOT_UNIQUE - true</title>
 		<link rel="stylesheet" href="style.css" type="text/css" />
 	</head>
 	<body>
 		<header role="banner">
-			<h1 role="banner"></h1>
-			<nav role="navigation"></nav>
+			<form>
+				<input type="search" role="search" />
+			</form>
 		</header>
 		<main role="main"></main>
-		<footer role="contentinfo"></footer>
+		<footer role="contentinfo">
+			<div role="contentinfo"></div>
+		</footer>
 		<script src="script.js" type="text/javascript"></script>
 	</body>
 </html>
