--- a/test/fixtures/sets-debug/38696/11-1-1-38696_1.html
+++ b/test/fixtures/sets-debug/38696/11-1-1-38696_1.html
@@ -2,8 +2,8 @@
 <html lang="fr">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta http-equiv="X-desc" content="page sans input de type search, checkbox, tel, url, text, number, color, range, radio, file, time, date, password, email, ni option, textarea, datalist, meter, keygen, output, optgroup, progress, select" />
-        <meta http-equiv="X-results" content="C:0,NC:0,NA:23,I:0" />
+        <meta http-equiv="X-desc" content="page sans input de type search, checkbox, tel, url, text, number, color, range, radio, file, time, date, password, email, ni textarea, datalist, meter, keygen, output, optgroup, progress, select" />
+        <meta http-equiv="X-results" content="C:0,NC:0,NA:22,I:0" />
         <title>testcase 11.1.1</title>
     </head>
     <body>
